policy-demo/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: pod1
spec:
  containers:
  - name: pod1  
    image: nginx:alpine
    resources:
      limits:
        memory: "32Mi"
        cpu: "50m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    app: pod2
spec:
  containers:
  - name: pod2    
    image: nginx:alpine
    resources:
      limits:
        memory: "32Mi"
        cpu: "50m"
    ports:
      - containerPort: 80
